test/files/neg/t6048.check
t6048.scala:4: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:9: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:14: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
    case _ => x
         ^
t6048.scala:15: warning: unreachable code due to variable pattern on line 14
    case 5 if true  => x // unreachable
                       ^
t6048.scala:15: warning: unreachable code
    case 5 if true  => x // unreachable
                       ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
